--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSON PlaceHolder</title>
+    <title>JSON PlaceHolder Assignment</title>
     <link rel="stylesheet" href="./index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -25,15 +25,15 @@
                 <li class="page-item " aria-current="page">
                     <span class="page-link">1</span>
                 </li>
-            <li class="page-item"><button class="page-link" onclick="loop2()">2</button></li>
-            <li class="page-item"><button class="page-link" onclick="loop3()">3</button></li>
-            <li class="page-item"><button class="page-link" onclick="loop4()">4</button></li>
-            <li class="page-item"><button class="page-link" onclick="loop5()">5</button></li>
-            <li class="page-item"><button class="page-link" onclick="loop6()">6</button></li>
-            <li class="page-item"><button class="page-link" onclick="loop7()">7</button></li>
-            <li class="page-item"><button class="page-link" onclick="loop8()">8</button></li>
-            <li class="page-item"><button class="page-link" onclick="loop9()">9</button></li>
-            <li class="page-item"><button class="page-link" onclick="loop10()">10</button></li>
+            <li class="page-item"><button class="page-link" onclick="pegi2()">2</button></li>
+            <li class="page-item"><button class="page-link" onclick="pegi3()">3</button></li>
+            <li class="page-item"><button class="page-link" onclick="pegi4()">4</button></li>
+            <li class="page-item"><button class="page-link" onclick="pegi5()">5</button></li>
+            <li class="page-item"><button class="page-link" onclick="pegi6()">6</button></li>
+            <li class="page-item"><button class="page-link" onclick="pegi7()">7</button></li>
+            <li class="page-item"><button class="page-link" onclick="pegi8()">8</button></li>
+            <li class="page-item"><button class="page-link" onclick="pegi9()">9</button></li>
+            <li class="page-item"><button class="page-link" onclick="pegi10()">10</button></li>
         </ul>
         </nav></span>
         
